--- a/scss/partials/_section.scss
+++ b/scss/partials/_section.scss
@@ -1,42 +1,52 @@
 @import "./color";
 @import "./mixins";
 
-
-.row{
+.row {
   position: relative;
-  width:100%;
+  width: 100%;
+  height: 100vh;
   display: flex;
-  z-index: -1;
+  z-index: -10;
+  scroll-snap-type: x mandatory;
 
   .section {
+    pointer-events: none;
     position: relative;
     min-width: 100%;
     height: 100vh;
     @include flex(center);
     top: 0;
     z-index: -1;
-    margin:collapse;
-  
+    scroll-snap-align: start;
+
     .image img {
       height: 100vh;
       width: 100vw;
       object-fit: cover;
     }
-    a.next{
-      position: relative;
-      z-index: 10;
-      bottom: 5rem;
-      left: 35%;
+  }
+  button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+
+    &.back {
+      position: fixed;
+      z-index: 20;
+      bottom: 3rem;
+      left: 80%;
+      padding-right: 20px;
     }
-    a.previous{
-      position: relative;
-      z-index: 10;
-      bottom: 5rem;
-      left: 30%;
+    &.next {
+      position: fixed;
+      z-index: 20;
+      bottom: 3rem;
+      left: 85%;
+      padding-left: 20px;
     }
-    a > img{
-        width: 3rem;
+    & > img {
+      z-index: 30;
+      width: 3rem;
     }
   }
-  
 }
