--- a/scss/main.css
+++ b/scss/main.css
@@ -81,19 +81,18 @@ nav ul li > a.active {
 }
 
 .row {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  z-index: -10;
+  z-index: auto;
   -ms-scroll-snap-type: x mandatory;
       scroll-snap-type: x mandatory;
 }
 
 .row .section {
-  pointer-events: none;
   position: relative;
   min-width: 100%;
   height: 100vh;
@@ -111,7 +110,6 @@ nav ul li > a.active {
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
   top: 0;
-  z-index: -1;
   scroll-snap-align: start;
 }
 
@@ -130,7 +128,6 @@ nav ul li > a.active {
 
 .row button.back {
   position: fixed;
-  z-index: 20;
   bottom: 3rem;
   left: 80%;
   padding-right: 20px;
@@ -138,14 +135,12 @@ nav ul li > a.active {
 
 .row button.next {
   position: fixed;
-  z-index: 20;
   bottom: 3rem;
   left: 85%;
   padding-left: 20px;
 }
 
 .row button > img {
-  z-index: 30;
   width: 3rem;
 }
 /*# sourceMappingURL=main.css.map */
