--- a/scss/partials/_section.scss
+++ b/scss/partials/_section.scss
@@ -2,21 +2,19 @@
 @import "./mixins";
 
 .row {
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100vh;
   display: flex;
-  z-index: -10;
+  z-index: auto;
   scroll-snap-type: x mandatory;
 
   .section {
-    pointer-events: none;
     position: relative;
     min-width: 100%;
     height: 100vh;
     @include flex(center);
     top: 0;
-    z-index: -1;
     scroll-snap-align: start;
 
     .image img {
@@ -32,20 +30,17 @@
 
     &.back {
       position: fixed;
-      z-index: 20;
       bottom: 3rem;
       left: 80%;
       padding-right: 20px;
     }
     &.next {
       position: fixed;
-      z-index: 20;
       bottom: 3rem;
       left: 85%;
       padding-left: 20px;
     }
     & > img {
-      z-index: 30;
       width: 3rem;
     }
   }
